--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./design/css/design.css">
   <link rel="stylesheet" href="./design/all.min.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./design/images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
+
   
   <title> Launch countdown timer</title>
 
